# HotelScapeAPI

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  alembic.ini  db.py  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: poetry.yml  python-app.yml
about/: index.html
auth/: deps.py  utils.py
crud/: auth_crud.py  booking_utils.py  client_utils.py  crud.py  invoice_utils.py  misc_crud.py  room_utils.py
docs/: about.md  index.md  installation.md  project_layout.md
installation/: index.html
migrations/: env.py
migrations/versions/: 043e8fba837a_.py  187a4af528b3_.py  32535fbbb7ae_.py  6d208a66d4e6_.py  af573c50e9f9_.py  b1aedcdc4406_.py  b3382d9d7ab5_.py  de0d79366901_.py  ea5b2bb40ff4_.py  f2b79e53eed0_.py
models/: booking.py  client.py  invoice.py  misc_tables.py  reservation.py  room.py  user.py
project_layout/: index.html
routers/: auth_routers.py  booking_routers.py  client_routers.py  invoice_routers.py  room_routers.py  routers.py
schemas/: booking_schemas.py  client_schemas.py  invoice_schemas.py  reservation_schemas.py  room_schemas.py  schemas.py  user_schemas.py
search/: search_index.json
tests/: conftest.py  test_auth.py  test_client_routers.py  test_room_routers.py
