[tool.poetry]
name = "hotel_api"
version = "0.1.0"
description = ""
authors = ["Taras Yaroshko <ty.yaroshko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
pydantic = "^1.9.1"
psycopg2-binary = "^2.9.3"
databases = "^0.6.0"
alembic = "^1.8.1"
SQLAlchemy-Utils = "^0.38.3"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"
pytest = "^7.1.2"
requests = "^2.28.1"
black = "^22.6.0"
mkdocs = "^1.3.1"
mkdocstrings = "^0.19.0"
coverage = "^6.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''
